<resources>
    <string name="app_name">frame</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_show">Hello Show!</string>
    <string name="action_settings">Settings</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>


    <string name="title_activity_show">ShowActivity</string>
    <string name="str_tab_home">首页</string>
    <string name="str_tab_guangchang">广场</string>
    <string name="str_tab_msg">信息</string>
    <string name="str_tab_my">我的</string>


    <string name="sticker_loading">内容获取中...</string>
    <string name="sticker_loading_present">一大波礼物正在向您靠近...</string>
    <string name="sticker_loading_text">失败乃成功之母，刷新再试试</string>
    <string name="sticker_network_error">加载失败， 点击这里重新试试</string>
    <string name="sticker_content_empty">内容暂时为空，敬请等待~</string>
    <string name="sticker_no_net">哎呀，手机好像是没连上网~</string>
    <string name="sticker_net_timeout">网络不太给力哦，一会再试试~</string>
    <string name="sticker_data_exception">数据加载异常，请稍后重试</string>
  <string name="my_string_grzx">个人中心</string>
  <string name="my_string_sc">收藏</string>
  <string name="my_string_zzxz">正在下载</string>
  <string name="my_string_xzwc">下载完成</string>
  <string name="my_string_setting">设置</string>
  <string name="str_video">视频</string>
  <string name="str_faxian">发现</string>
  <string name="str_yedian">野店</string>
  <string name="str_pause">暂停</string>
  <string name="str_cancel">取消</string>
  <string name="str_bdhc">本地缓存</string>
  <string name="str_zzhc">正在缓存</string>

</resources>
