<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/sticker_blue"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/my_string_grzx"
                android:textColor="@color/potato_white"
                android:textSize="@dimen/txt_max" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="onClick"
                android:padding="10dip"
                android:src="@drawable/ic_add_white_24dp" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_header">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/head"
                android:fadingEdge="none"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@color/potato_white"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/def_gray_small" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/tv_nick"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxEms="8"
                                android:singleLine="true"
                                android:text="nick"
                                android:textSize="21sp" />

                            <TextView
                                android:id="@+id/tv_uname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxEms="8"
                                android:singleLine="true"
                                android:text="xxxxxxx"
                                android:textSize="21sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ll_fav"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:background="@color/potato_white"
                            android:layout_marginTop="20dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/navbar_home_normal"
                                android:padding="10dp"
                                 />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_string_sc" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_video_cacheing"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:background="@color/potato_white"
                            android:layout_marginTop="1dp"
                            android:onClick="onClick">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/navbar_home_normal"
                                android:padding="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_string_zzxz" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_video_cached"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:background="@color/potato_white"
                            android:layout_marginTop="1dp"
                            android:onClick="onClick">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/navbar_home_normal"
                                android:padding="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_string_xzwc" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_setting"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:background="@color/potato_white"
                            android:layout_marginTop="20dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/navbar_home_normal"
                                android:padding="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_string_setting" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </ScrollView>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/rl_header"
            android:background="@drawable/bottom_shadow" />
    </RelativeLayout>


</layout>